welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:10: error: value =< is not a member of Int
	if(nbBiscuit =< 20 ){
                     ^